fix: some layout issues

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -78,4 +78,11 @@
       }
     }
   }
+
+  &.small {
+
+    & > .container {
+      max-width: 640px;
+    }
+  }
 }
